--- a/index.html
+++ b/index.html
@@ -193,13 +193,40 @@ width: 15px;
     }
     .hidden-text { display: none; }
 
-    #geosearch {
+    #geosearch-container {
       position: absolute;
       top: 10px;
       left: 310px;
       right: 600px;
       padding: 5px;
       z-index: 1000;
+      display: flex;
+    }
+    #geosearch {
+      flex: 1;
+      padding: 5px;
+    }
+    #geosearchBtn {
+      margin-left: 5px;
+    }
+    #geosearch-suggestions {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      right: 0;
+      background: #2b2b2b;
+      border: 1px solid #444;
+      max-height: 200px;
+      overflow-y: auto;
+      display: none;
+      z-index: 1001;
+    }
+    #geosearch-suggestions div {
+      padding: 4px;
+      cursor: pointer;
+    }
+    #geosearch-suggestions div:hover {
+      background: #444;
     }
     .unsaved {
       color: red;
@@ -527,7 +554,7 @@ body, #sidebar, #basemap-switcher {
   #sidebar.show { transform: translateX(0); }
   #basemap-switcher { display: none; }
   #narzedzia { left: 10px; top: 140px; }
-  #geosearch { left: 10px; right: 10px; top: 90px; }
+  #geosearch-container { left: 10px; right: 10px; top: 90px; }
   #gpsFollowBtn {
     position: fixed;
     bottom: 20px;
@@ -631,7 +658,11 @@ img.emoji {
       <button id="syncBtn">Synchronizuj (<span id="syncCount">0</span>)</button>
     </div>
   </div>
-  <input type="text" id="geosearch" placeholder="Szukaj adresu lub współrzędnych...">
+  <div id="geosearch-container">
+    <input type="text" id="geosearch" placeholder="Szukaj adresu lub współrzędnych...">
+    <button id="geosearchBtn" class="tool-btn" title="Szukaj">🔍</button>
+    <div id="geosearch-suggestions"></div>
+  </div>
   <div id="narzedzia">
     <button id="handTool" class="tool-btn">
       <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/1f44b.svg" width="24" height="24" alt="hand">
@@ -639,6 +670,8 @@ img.emoji {
     <button id="pinTool" class="tool-btn">
       <img src="https://cdn.jsdelivr.net/gh/twitter/twemoji@latest/assets/svg/1f4cd.svg" width="24" height="24" alt="pin">
     </button>
+    <button id="undoBtn" class="tool-btn" title="Cofnij">⬅️</button>
+    <button id="redoBtn" class="tool-btn" title="Ponów">➡️</button>
   </div>
   <div id="map"></div>
   <button id="toggleLayers">☰ Warstwy</button>
@@ -947,6 +980,8 @@ function slugify(str) {
     let activeRoutePin = null;
     const handBtn = document.getElementById("handTool");
     const pinBtn = document.getElementById("pinTool");
+    const undoBtn = document.getElementById('undoBtn');
+    const redoBtn = document.getElementById('redoBtn');
     const mapEl = document.getElementById("map");
     let searchLayer = null;
     let searchMarker = null;
@@ -958,6 +993,29 @@ function slugify(str) {
       popupAnchor: [1, -34],
       shadowSize: [41, 41]
     });
+
+    const undoStack = [];
+    const redoStack = [];
+    function pushAction(action) {
+      undoStack.push(action);
+      redoStack.length = 0;
+    }
+    function undo() {
+      const action = undoStack.pop();
+      if (action) {
+        action.undo();
+        redoStack.push(action);
+      }
+    }
+    function redo() {
+      const action = redoStack.pop();
+      if (action) {
+        action.redo();
+        undoStack.push(action);
+      }
+    }
+    if (undoBtn) undoBtn.addEventListener('click', undo);
+    if (redoBtn) redoBtn.addEventListener('click', redo);
     const sortSelect = document.getElementById('sortowanie');
     sortSelect.addEventListener('change', () => {
       sortMode = sortSelect.value;
@@ -1588,9 +1646,37 @@ function emojiHtml(str) {
 
     function initMap() {
       L.Popup.prototype.options.maxWidth = 800;
- map = L.map('map').setView([52.1, 20.9], 7);
+      map = L.map('map').setView([52.1, 20.9], 7);
       rysowaneTrasy.addTo(map);
       routingLayer = L.layerGroup().addTo(map);
+
+      let moveStartCenter = null;
+      let moveStartZoom = null;
+      let restoringView = false;
+      map.on('movestart', () => {
+        if (restoringView) return;
+        moveStartCenter = map.getCenter();
+        moveStartZoom = map.getZoom();
+      });
+      map.on('moveend', () => {
+        if (restoringView) return;
+        const fromCenter = moveStartCenter;
+        const fromZoom = moveStartZoom;
+        const toCenter = map.getCenter();
+        const toZoom = map.getZoom();
+        pushAction({
+          undo: () => {
+            restoringView = true;
+            map.setView(fromCenter, fromZoom);
+            restoringView = false;
+          },
+          redo: () => {
+            restoringView = true;
+            map.setView(toCenter, toZoom);
+            restoringView = false;
+          }
+        });
+      });
 
       // Ensure popups are fully visible by centering the map on them
       map.on('popupopen', e => {
@@ -2037,6 +2123,10 @@ attachPopupHandlers(p.marker, p);
       if (saveBtnTmp) saveBtnTmp.style.display = 'block';
       const defaultEmoji = 'emoji38';
       const marker = L.marker(latlng, {icon: createEmojiIcon(defaultEmoji, null, 24)}).addTo(map);
+      pushAction({
+        undo: () => map.removeLayer(marker),
+        redo: () => marker.addTo(map)
+      });
       const newId = crypto.randomUUID();
       const tempPin = {
         id: newId,
@@ -2671,11 +2761,11 @@ function showRoutePopup(pinId, tr, latlng) {
 
     function initGeoSearch() {
       const input = document.getElementById('geosearch');
+      const btn = document.getElementById('geosearchBtn');
+      const suggestions = document.getElementById('geosearch-suggestions');
       if (!input) return;
-      input.addEventListener('keydown', e => {
-        if (e.key !== 'Enter') return;
-        const q = input.value.trim();
-        if (!q) return;
+
+      function executeSearch(q) {
         const m = q.match(/^(-?\d+(?:\.\d+)?)[ ,]+(-?\d+(?:\.\d+)?)/);
         if (m) {
           const lat = parseFloat(m[1]);
@@ -2700,6 +2790,50 @@ function showRoutePopup(pinId, tr, latlng) {
             console.error('Geocoding error', err);
             alert('Błąd geokodowania');
           });
+      }
+
+      function handleSearch() {
+        const q = input.value.trim();
+        if (!q) return;
+        executeSearch(q);
+        if (suggestions) suggestions.style.display = 'none';
+      }
+
+      if (btn) btn.addEventListener('click', handleSearch);
+      input.addEventListener('keydown', e => { if (e.key === 'Enter') handleSearch(); });
+
+      let debounce;
+      input.addEventListener('input', () => {
+        const q = input.value.trim();
+        if (debounce) clearTimeout(debounce);
+        if (!suggestions) return;
+        if (!q) { suggestions.style.display = 'none'; return; }
+        debounce = setTimeout(() => {
+          fetch(`https://nominatim.openstreetmap.org/search?format=json&limit=5&q=${encodeURIComponent(q)}`)
+            .then(r => r.json())
+            .then(data => {
+              suggestions.innerHTML = '';
+              data.forEach(item => {
+                const div = document.createElement('div');
+                div.textContent = item.display_name;
+                div.addEventListener('click', () => {
+                  input.value = item.display_name;
+                  suggestions.style.display = 'none';
+                  map.setView([item.lat, item.lon], 16);
+                  showSearchMarker(item.lat, item.lon, item.display_name);
+                });
+                suggestions.appendChild(div);
+              });
+              suggestions.style.display = data.length ? 'block' : 'none';
+            });
+        }, 300);
+      });
+
+      document.addEventListener('click', e => {
+        if (!suggestions) return;
+        if (!suggestions.contains(e.target) && e.target !== input) {
+          suggestions.style.display = 'none';
+        }
       });
     }
 
