--- a/index.html
+++ b/index.html
@@ -212,14 +212,15 @@ width: 15px;
     #geosearch-suggestions {
       position: absolute;
       top: 100%;
-      left: 0;
+      left: 200px;
       right: 0;
-      background: #2b2b2b;
+      background: #2b2b2be0;
       border: 1px solid #444;
       max-height: 200px;
       overflow-y: auto;
       display: none;
       z-index: 1001;
+      margin-right: 50px;
     }
     #geosearch-suggestions div {
       padding: 4px;
